--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,8 @@
 $body-bg: #fbfbfb;
+$body-bg-dark: #252525;
+
 $card-bg: #fff;
+$card-bg-dark: #393e46;
 
 // BREAKPOINTS
 $breakpoint-tablet: 768px;
